<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fr.simplex-software.eclipse-mp.xp4</groupId>
  <artifactId>mp41-tests</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Eclipse Micro Profile on JBoss EAP 7.4.8/XP4 :: The master POM</name>
  <modules>
    <module>mp-config</module>
    <module>mp-health</module>
    <module>mp-open-api</module>
  </modules>
  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <java.version>11</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.war.plugin>3.3.2</version.war.plugin>
    <version.server.bom>7.4.3.GA</version.server.bom>
    <version.server.bootable-jar>4.0.0.GA-redhat-00003
    </version.server.bootable-jar>
    <version.failsafe.plugin>3.0.0-M8</version.failsafe.plugin>
    <version.rest-assured>5.0.1</version.rest-assured>
    <version.wildfly-jar.plugin>8.1.0.Final</version.wildfly-jar.plugin>
    <version.junit.bom>5.9.1</version.junit.bom>
    <version.arquillian.bom>1.7.0.Alpha13</version.arquillian.bom>
    <version.org.wildfly.arquillian>3.0.0.Final</version.org.wildfly.arquillian>
    <version.slf4j>1.7.36</version.slf4j>
    <version.jkube.plugin>1.10.1</version.jkube.plugin>
    <version.jakartaee>8.0.0</version.jakartaee>
    <server.jvm.jpms.args>--add-exports=java.desktop/sun.awt=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED</server.jvm.jpms.args>
    <client.jvm.jpms.args>--add-exports=java.desktop/sun.awt=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED</client.jvm.jpms.args>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.eclipse.microprofile</groupId>
        <artifactId>microprofile</artifactId>
        <version>5.0</version>
        <type>pom</type>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>jakarta.platform</groupId>
        <artifactId>jakarta.jakartaee-api</artifactId>
        <version>${version.jakartaee}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${version.junit.bom}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.jboss.arquillian</groupId>
        <artifactId>arquillian-bom</artifactId>
        <version>${version.arquillian.bom}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>rest-assured</artifactId>
        <version>${version.rest-assured}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.24.2</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>1.33</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>jakarta.platform</groupId>
      <artifactId>jakarta.jakartaee-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.microprofile</groupId>
      <artifactId>microprofile</artifactId>
      <scope>provided</scope>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>org.wildfly.arquillian</groupId>
      <artifactId>wildfly-arquillian-container-bootable</artifactId>
      <version>${version.org.wildfly.arquillian}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.arquillian.junit5</groupId>
      <artifactId>arquillian-junit5-container</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <version>${version.rest-assured}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
    </dependency>
  </dependencies>
  <build>
    <finalName>${project.artifactId}</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
          <version>${version.war.plugin}</version>
          <configuration>
            <failOnMissingWebXml>false</failOnMissingWebXml>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${version.failsafe.plugin}</version>
          <configuration>
            <skipTests>true</skipTests>
            <skip>true</skip>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${version.failsafe.plugin}</version>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
              <configuration>
                <failIfNoTests>true</failIfNoTests>
                <systemPropertyVariables>
                  <bootable.jar>
                    ${project.build.directory}/${project.artifactId}-bootable.jar
                  </bootable.jar>
                  <arquillian.xml>arquillian.xml</arquillian.xml>
                  <server.jvm.args>${server.jvm.jpms.args}</server.jvm.args>
                </systemPropertyVariables>
                <argLine>${client.jvm.jpms.args}</argLine>
                <redirectTestOutputToFile>false</redirectTestOutputToFile>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <profiles>
    <profile>
      <id>local</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.wildfly.plugins</groupId>
              <artifactId>wildfly-jar-maven-plugin</artifactId>
              <version>${version.wildfly-jar.plugin}</version>
              <configuration>
                <feature-pack-location>
                  org.jboss.eap:wildfly-galleon-pack:${version.server.bootable-jar}
                </feature-pack-location>
                <layers>
                  <layer>jaxrs-server</layer>
                  <layer>microprofile-platform</layer>
                </layers>
                <plugin-options>
                  <jboss-fork-embedded>true</jboss-fork-embedded>
                </plugin-options>
              </configuration>
              <executions>
                <execution>
                  <goals>
                    <goal>package</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
    <profile>
      <id>openshift</id>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.wildfly.plugins</groupId>
              <artifactId>wildfly-jar-maven-plugin</artifactId>
              <version>${version.wildfly-jar.plugin}</version>
              <configuration>
                <feature-pack-location>
                  org.jboss.eap:wildfly-galleon-pack:${version.server.bootable-jar}
                </feature-pack-location>
                <layers>
                  <layer>cloud-server</layer>
                </layers>
                <plugin-options>
                  <jboss-fork-embedded>true</jboss-fork-embedded>
                </plugin-options>
                <cloud/>
              </configuration>
              <executions>
                <execution>
                  <goals>
                    <goal>package</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
            <plugin>
              <groupId>org.eclipse.jkube</groupId>
              <artifactId>openshift-maven-plugin</artifactId>
              <version>${version.jkube.plugin}</version>
              <executions>
                <execution>
                  <goals>
                    <goal>resource</goal>
                    <goal>build</goal>
                    <goal>apply</goal>
                  </goals>
                </execution>
              </executions>
              <configuration>
                <enricher>
                  <config>
                    <jkube-service>
                      <type>NodePort</type>
                    </jkube-service>
                  </config>
                </enricher>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
  </profiles>
</project>